// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic snapshot 1`] = `
<div
  className="MuiGrid-item-2 MuiGrid-grid-sm-12-55"
>
  <h3
    className="MuiTypography-root-98 MuiTypography-h3-112 MuiTypography-colorTextSecondary-131 MuiTypography-gutterBottom-125"
  >
    Title
  </h3>
  <h2
    className="MuiTypography-root-98 MuiTypography-h6-115 MuiTypography-colorPrimary-128"
  >
    Subtitle
  </h2>
</div>
`;

exports[`snapshot with neither title nor pageTitle 1`] = `null`;

exports[`snapshot with only pageTitle 1`] = `
<div
  className="MuiGrid-item-2 MuiGrid-grid-sm-12-55"
>
  <h2
    className="MuiTypography-root-98 MuiTypography-h6-115 MuiTypography-colorPrimary-128"
  >
    Subtitle
  </h2>
</div>
`;

exports[`snapshot with only title 1`] = `
<div
  className="MuiGrid-item-2 MuiGrid-grid-sm-12-55"
>
  <h3
    className="MuiTypography-root-98 MuiTypography-h3-112 MuiTypography-colorTextSecondary-131 MuiTypography-gutterBottom-125"
  >
    Title
  </h3>
</div>
`;
